--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="about.html"><i class="bi bi-file-person-fill">About</i></a>
         </li>
          <li class="dropdown">
-          <a href="#"><i class="bi bi-list">Menu</i></a>
+          <a href="#"><i class="bi bi-list"></i></a>
            <div class="dropdownmenu">
              <a href="#">Serviço</a>
              <a href="#">Serviço</a>
